# 011_FFMPEG

./: README.md
app/: build.gradle
app/src/androidTest/java/kim/hsl/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  CMakeLists.txt  FFMPEG.cpp  FFMPEG.h  JavaCallHelper.cpp  JavaCallHelper.h  JavaPlayerCaller.cpp  JavaPlayerCaller.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/java/kim/hsl/ffmpeg/: MainActivity.java  Player.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/kim/hsl/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
